--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI = "mongodb+srv://pawan:dbpass@cluster0.elfrei9.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://test:dbpass@cluster0.3awdooe.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET = "ajldsiasjkaAJsdfojijfJJDFIDJkAFSFDoiehgns.jjljlihjbhghjy"
 JWT_EXPIRES = "2d"
 COOKIE_EXPIRES = 5
